<resources>
    <string name="app_name">FrancoVoca</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_dash_board">DashBoard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login_label_email">Account</string>
    <string name="login_email_hint">Enter your email address</string>
    <string name="login_label_password">Password</string>
    <string name="login_label_signin">LOGIN</string>
    <string name="login_label_signup">SIGNUP</string>
    <string name="signup_email_hint">Confirmation email will go here</string>
    <string name="signup_password_input">Your Password</string>
    <string name="signup_password_hint">Enter your password</string>
    <string name="signup_password_confirmation_input">Confirm Your Password</string>
    <string name="signup_password_confirmation_hint">Re-enter your password</string>
    <string name="signup_email_input">Your Email Address</string>
    <string name="signup_username_input">Enter Your User Name</string>
    <string name="signup_username_hint">This will be seen by others</string>
    <string name="signup_button_confirm">Confirmation</string>
    <string name="signup_button_back">BACK</string>
</resources>
